recommit rerun notebook

--- a/notebooks/umap_vs_negtsne.ipynb
+++ b/notebooks/umap_vs_negtsne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -28,30 +28,24 @@
     "from vis_utils.plot import  plot_scatter\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "root_path = get_path(\"data\")\n",
     "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# parameters for all methods\n",
@@ -71,15 +65,12 @@
     "noise_in_estimator = 1.0"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# set up matplotlib\n",
@@ -90,25 +81,19 @@
     "cmap = matplotlib.cm.get_cmap(\"tab10\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "dataset= \"mnist\"\n",
     "x, y, sknn_graph, pca2 = load_dataset(root_path, dataset, k)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -117,24 +102,18 @@
     "# Clamp arguments of log"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "clamp_low_vals = [1e-3, 1e-4, 1e-5, 1e-6, 1e-8, 1e-10, 0.0]\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -143,15 +122,12 @@
     "# Neg sample"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "loss_mode = \"neg_sample\"\n",
@@ -171,15 +147,12 @@
     "    embedders_neg_no_anneal.append(embedder)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -201,10 +174,7 @@
     "    cax = plot_scatter(cax, embd, y, f\"clamp_low {clamp_low_vals[i]}\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -225,10 +195,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -253,10 +220,7 @@
     "    embedders_neg_anneal.append(embedder)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -283,10 +247,7 @@
     "    cax = plot_scatter(cax, embd, y, f\"clamp_low {clamp_low_vals[i]}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -307,10 +268,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -319,10 +277,7 @@
     "### UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -347,10 +302,7 @@
     "    embedders_umap_no_anneal.append(embedder)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -370,7 +322,6 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    }
@@ -393,10 +344,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -421,10 +369,7 @@
     "    embedders_umap_anneal.append(embedder)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -444,7 +389,6 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    }
@@ -467,10 +411,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -480,10 +421,7 @@
     "(different from the clamp value in the logarithm function, working directy on the gradient here)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -494,10 +432,7 @@
     "epsilons_umap = [10.0, 1.0, 0.1, 0.01, 0.001, 0.0001, 0.00001, 1e-10, 0.0]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -516,20 +451,14 @@
     "    umappers_eps_anneal.append(umapper)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -558,10 +487,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -582,10 +508,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -604,10 +527,7 @@
     "    umappers_eps_no_anneal.append(umapper)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -635,10 +555,7 @@
     "    plot_scatter(cax, embd, y, rf\"$eps={epsilons_umap[i]}$\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -659,10 +576,7 @@
     "    plt.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
